# llm-workshop

./: .env.example  .gitignore  pyproject.toml
00-start-here/: README.md  hello-agent.py  learnings.md  pyproject.toml
01-missions/mission-02-rag-basics/: README.md  conftest.py  learning.md
01-missions/mission-02-rag-basics/sample_documents/: python_tips.txt
01-missions/mission-02-rag-basics/src/: chunker.py  document_loader.py  embedder.py  generator.py  rag_system.py  retriever.py  vector_store.py
01-missions/mission-02-rag-basics/tests/: test_chunker.py  test_integration.py  test_loader.py  test_retriever.py
05-production-ready/deployment/openclaw/: cloudflare-tunnel-ssh-jellyfin.md  openclaw-agent-bare-metal-setup.md
99-resources/: glossary.md
